--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Build, test (if env-vars available) and lint
+name: Build, test and lint
 
 on:
   push:
@@ -25,12 +25,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install ".[dev]"
-    - name: Lint with flake8
+    - name: Lint (flake8, black, mypy)
       run: |
         # stop the build if there are Python syntax errors or undefined names
         pflake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         pflake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+        black .
+        mypy .
+    - name: Test (pytest)
       run: |
         pytest
