--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,18 +56,17 @@ jobs:
 
       - name: Create Release
         if: steps.check_version.outputs.version_changed == 'true'
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: v${{ steps.check_version.outputs.new_version }}
-          release_name: Release v${{ steps.check_version.outputs.new_version }}
+          tag: v${{ steps.check_version.outputs.new_version }}
+          name: Release v${{ steps.check_version.outputs.new_version }}
           body: |
             Release of version ${{ steps.check_version.outputs.new_version }}
             
             For full changes, see the [changelog](CHANGELOG.md).
           draft: false
           prerelease: false
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install build dependencies
         if: steps.check_version.outputs.version_changed == 'true'
