--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "itau_uy_api"
-version = "0.1.0"
-description = "A Python library for interacting with the Itau UY bank API"
+version = "0.2.0"
+description = "A Python library for interacting with the Itaú UY bank API"
 readme = "README.md"
 requires-python = ">=3.12"
 license = "MIT"
