--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,6 @@ jobs:
     permissions:
       contents: write
       id-token: write
-    env:
-      UV_CACHE_DIR: /tmp/.uv-cache
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,20 +21,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version-file: "pyproject.toml"
-
-      - name: Install uv
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-
-      - name: Restore uv cache
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.uv-cache
-          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-          restore-keys: |
-            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-            uv-${{ runner.os }}
 
       - name: Check version change
         id: check_version
@@ -67,24 +51,16 @@ jobs:
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create venv and install build dependencies
+      - name: Install build
         if: steps.check_version.outputs.version_changed == 'true'
-        run: |
-          python -m venv .venv
-          . .venv/bin/activate
-          uv pip install build
+        run: pip install build
 
       - name: Build package
         if: steps.check_version.outputs.version_changed == 'true'
-        run: |
-          . .venv/bin/activate
-          python -m build
+        run: python -m build
 
       - name: Publish to PyPI
         if: steps.check_version.outputs.version_changed == 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://upload.pypi.org/legacy/
-
-      - name: Minimize uv cache
-        run: uv cache prune --ci
