--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,18 @@
-name: Create Release and Publish to PyPI
+name: Build, test, lint, and publish
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
-  create-release-and-publish:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -22,10 +21,34 @@ jobs:
         with:
           python-version-file: "pyproject.toml"
 
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      - name: Restore uv cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.uv-cache
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+            uv-${{ runner.os }}
+
+      - name: Install dependencies
+        run: uv sync --all-extras --dev
+
+      - name: Lint and test
+        run: |
+          uv run pflake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          uv run pflake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          uv run black --check --diff .
+          uv run mypy . --strict --ignore-missing-imports
+          uv run pytest
+
       - name: Check version change
         id: check_version
         run: |
-          git fetch --tags
           CURRENT_VERSION=$(grep '^version = ' pyproject.toml | sed 's/version = "\(.*\)"/\1/')
           LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
           if [ "v$CURRENT_VERSION" != "$LATEST_TAG" ]; then
@@ -36,6 +59,10 @@ jobs:
             echo "Version unchanged"
             echo "version_changed=false" >> $GITHUB_OUTPUT
           fi
+
+      - name: Build package
+        if: steps.check_version.outputs.version_changed == 'true'
+        run: uv run build
 
       - name: Create Release
         if: steps.check_version.outputs.version_changed == 'true'
@@ -51,16 +78,11 @@ jobs:
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install build
-        if: steps.check_version.outputs.version_changed == 'true'
-        run: pip install build
-
-      - name: Build package
-        if: steps.check_version.outputs.version_changed == 'true'
-        run: python -m build
-
       - name: Publish to PyPI
         if: steps.check_version.outputs.version_changed == 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://upload.pypi.org/legacy/
+
+      - name: Minimize uv cache
+        run: uv cache prune --ci
