--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,7 +90,10 @@ jobs:
 
       - name: Publish to PyPI
         if: steps.check_version.outputs.version_changed == 'true'
-        run: uvx twine upload dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        run: uvx twine upload --non-interactive dist/*
 
       - name: Minimize uv cache
         run: uv cache prune --ci
